--- a/docs/components/badge/index.mdx
+++ b/docs/components/badge/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 10
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Badge
 
@@ -144,25 +145,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.24-alpha (July 3, 2025)
-- **Enhanced**: Badge styling improvements and consistency fixes
-- **New**: Added custom color support for badges
-
-### Version 0.0.22-alpha (June 25, 2025)
-- **Enhanced**: Improved badge accessibility features
-- **New**: Added badge size variants and dismissible badges
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **Enhanced**: Apply design tokens to Badge component
-- **New**: Added outline variant and icon support
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **New**: Added Badge component with status variants
-- **New**: Count badge support and positioning
-
-### Version 0.0.15-alpha (May 20, 2025)
-- **New**: Add Badge Component (initial implementation)
-- **New**: Basic badge functionality with semantic colors
+<ComponentChangelog 
+  component="elvt-badge" 
+  maxVersions={10}
+  showMetadata={true}
+  compactMode={false}
+/>
