--- a/docs/components/breadcrumb/index.mdx
+++ b/docs/components/breadcrumb/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 12
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Breadcrumbs are navigational aids that show users their current location within a website's hierarchy and provide quick navigation to parent pages. The ELEVATE Breadcrumb component helps designers and developers create consistent wayfinding patterns that reduce cognitive load and improve user orientation in complex information architectures.
 
@@ -310,11 +311,9 @@ Experience how breadcrumbs behave in realistic contexts. All examples use actual
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.25-alpha (July 10, 2025)
-- **Enhanced**: Adjust Design for BreadcrumbItem
-
-### Version 0.0.2-alpha (March 19, 2025)
-- **New**: Add Breadcrumb and Breadcrumb Item Components (initial implementation)
+<ComponentChangelog 
+  component="elvt-breadcrumb" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
