--- a/docs/components/button-group/index.mdx
+++ b/docs/components/button-group/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 14
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Button Groups combine multiple related buttons into a cohesive unit with consistent spacing, alignment, and visual treatment. The ELEVATE Button Group component helps designers and developers organize actions logically, create clear visual hierarchy, and reduce interface complexity while maintaining accessibility and usability standards.
 
@@ -340,11 +341,9 @@ Experience how button groups behave in realistic contexts. All examples use actu
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **Fixed**: Fixed Usability Issues in Button and Button Group Stories
-
-### Version 0.0.4-alpha (March 28, 2025)
-- **New**: Add ButtonGroup Component (initial implementation)
+<ComponentChangelog 
+  component="elvt-button-group" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
