--- a/docs/components/charts/index.mdx
+++ b/docs/components/charts/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 15
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Charts transform raw data into visual insights that users can quickly understand and act upon. The ELEVATE Charts component helps designers and developers create consistent, accessible data visualizations that communicate information clearly and support data-driven decision making.
 
@@ -832,4 +833,9 @@ Components commonly used to create chart interfaces:
 
 ## Changelog
 
-Charts are implemented using ELEVATE components combined with SVG, HTML, and CSS patterns for flexible data visualization needs.
+<ComponentChangelog 
+  component="elvt-charts" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
