--- a/docs/components/checkbox/index.mdx
+++ b/docs/components/checkbox/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 5
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Checkbox
 
@@ -324,21 +325,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- **Enhanced**: Restyle Elevate Checkbox Component
-- Current version in active development
-
-### Version 0.0.23-alpha (June 27, 2025)
-- **New**: Add CheckboxComponent.focus() method
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **Enhanced**: Add Elevate Switch and Update Checkbox
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **Fixed**: Added hide-label Prop and Fixed Checkbox Usability Issues
-
-### Version 0.0.16-alpha (June 4, 2025)
-- **New**: Add Elevate Checkbox (major implementation)
-
-### Version 0.0.1-alpha (March 14, 2025)
-- **New**: Add Checkbox Component (initial implementation)
+<ComponentChangelog 
+  component="elvt-checkbox" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
