--- a/docs/components/chip/index.mdx
+++ b/docs/components/chip/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 16
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Chips are compact elements that help users manage selections, filters, and tags efficiently. The ELEVATE Chip component helps designers and developers create consistent, accessible interfaces for content organization and user interactions.
 
@@ -227,17 +228,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.17-alpha (June 5, 2025)
-- **Enhanced**: Adjust/Revisit Chip Component Styles
-
-### Version 0.0.15-alpha (May 23, 2025)
-- **Fixed**: Update Design Tokens, Higher Contrast for Badges/Chips
-
-### Version 0.0.13-alpha (May 16, 2025)
-- **New**: Add Elevate Chip (major implementation)
-
-### Version 0.0.1-alpha (March 14, 2025)
-- **New**: Add Chip Component (initial implementation)
+<ComponentChangelog 
+  component="elvt-chip" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
