--- a/docs/components/date-picker/index.mdx
+++ b/docs/components/date-picker/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 8
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Date Picker
 
@@ -378,25 +379,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.24-alpha (July 3, 2025)
-- **Enhanced**: Date picker styling and interaction improvements
-- **New**: Added date range selection support
-
-### Version 0.0.22-alpha (June 25, 2025)
-- **Enhanced**: Improved keyboard navigation and accessibility
-- **New**: Added date validation and constraint support
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **Enhanced**: Apply design tokens to Date Picker component
-- **Fixed**: Resolved date format consistency issues
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **New**: Added Date Picker component with calendar interface
-- **New**: Support for date ranges and validation
-
-### Version 0.0.15-alpha (May 20, 2025)
-- **New**: Add Date Picker Component (initial implementation)
-- **New**: Basic date selection and formatting support
+<ComponentChangelog 
+  component="elvt-date-picker" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
