--- a/docs/components/divider/index.mdx
+++ b/docs/components/divider/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 18
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Dividers provide subtle visual separation that helps users understand content relationships and hierarchy. The ELEVATE Divider component helps designers and developers create consistent, accessible interfaces that organize information clearly without creating visual clutter.
 
@@ -361,30 +362,9 @@ import '@inform-elevate/elevate-core-ui/dist/components/divider/divider.js';
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- **New**: Divider component fully implemented and functional
-- **New**: Horizontal and vertical orientation support
-- **Enhanced**: Integration with Dropdown component for menu separation
-- **Enhanced**: Flexible styling through CSS properties
-- **Enhanced**: Theme-based default styling with customization options
-- Current version in active development
-
-### Divider Component Features
-- ✅ Basic horizontal dividers for content separation
-- ✅ Vertical dividers for inline content layouts
-- ✅ Integration with Dropdown and Menu components
-- ✅ Custom styling support via CSS properties
-- ✅ Theme-aware default styling
-- ✅ Comprehensive accessibility support
-
-### Available Components
-- `DividerComponent`: Main divider element with orientation support
-- Integration with `DropdownComponent` for menu separation
-- Works seamlessly in card layouts and content sections
-
-### Implementation Status
-- ✅ Core divider functionality operational
-- ✅ Orientation switching (horizontal/vertical) working properly
-- ✅ Custom styling and theming functional
-- ✅ Integration with other components working
-- ✅ Accessibility features implemented
+<ComponentChangelog 
+  component="elvt-divider" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
