--- a/docs/components/drawer/index.mdx
+++ b/docs/components/drawer/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 19
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Drawers expand interface real estate without navigating away from the current context. The ELEVATE Drawer component helps designers and developers create consistent, accessible overlay experiences that provide additional functionality while maintaining user focus and orientation.
 
@@ -714,8 +715,9 @@ Components commonly used to create drawer patterns:
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-- Drawer patterns and components are implemented using existing ELEVATE components
-- Comprehensive examples and styling patterns available
-- Focus on accessibility and responsive design principles
+<ComponentChangelog 
+  component="elvt-drawer" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
