--- a/docs/components/icon/index.mdx
+++ b/docs/components/icon/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 11
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Icons create visual consistency and improve interface comprehension through universal symbols. The ELEVATE Icon component helps designers and developers create consistent, accessible interfaces that communicate effectively across language and cultural barriers.
 
@@ -440,24 +441,9 @@ Experience how icons enhance real interface elements and improve usability.
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- **New**: Icon component fully implemented and functional
-- **New**: Material Design Icons integration with 20+ essential icons
-- **New**: Complete SVG rendering system with blob URL support
-- **New**: Automatic icon registry with MDI and ELEVATE icon support
-- **Enhanced**: CSS-based styling for flexible sizing and coloring
-- **Enhanced**: Full accessibility support with ARIA attributes
-- **Fixed**: Icon loading and display issues resolved
-
-### Available Icons
-- **Action Icons**: plus, delete, pencil, download, upload, copy, share, heart
-- **Navigation Icons**: home, chevron-left/right/up/down, menu, close, arrow-left/right  
-- **Status Icons**: check, check-circle, alert-circle, close-circle, information, help-circle
-- **System Icons**: settings, magnify, dots-vertical, open-in-new, web
-
-### Implementation Status
-- ✅ Component fully functional
-- ✅ Icons display correctly in all contexts
-- ✅ Integration with Button and other components working
-- ✅ Accessibility features implemented
-- ✅ CSS styling system operational
+<ComponentChangelog 
+  component="elvt-icon" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
