--- a/docs/components/radio/index.mdx
+++ b/docs/components/radio/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 6
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Radio
 
@@ -528,21 +529,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.23-alpha (June 27, 2025)
-- **Enhanced**: Improved radio group focus management
-- **New**: Added radio button size variants
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **Enhanced**: Updated radio styling with design tokens
-- **Fixed**: Improved keyboard navigation between radio groups
-
-### Version 0.0.18-alpha (June 9, 2025)
-- **New**: Added radio group validation states
-- **Enhanced**: Better screen reader support
-
-### Version 0.0.15-alpha (May 20, 2025)
-- **New**: Add Radio Component (initial implementation)
-- **New**: Basic radio group functionality and styling
+<ComponentChangelog 
+  component="elvt-radio" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
