--- a/docs/components/select/index.mdx
+++ b/docs/components/select/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 4
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Select
 
@@ -412,21 +413,9 @@ import '@inform-elevate/elevate-core-ui/dist/components/select/select.js';
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.25-alpha (July 10, 2025)
-- **Enhanced**: Improved keyboard navigation
-- **New**: Added searchable select option
-
-### Version 0.0.22-alpha (June 25, 2025)
-- **New**: Added select size variations
-- **Enhanced**: Better option grouping support
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **New**: Added validation state support
-- **Enhanced**: Improved accessibility features
-
-### Version 0.0.15-alpha (May 20, 2025)
-- **New**: Add Select Component (initial implementation)
-- **New**: Basic option selection and styling
+<ComponentChangelog 
+  component="elvt-select" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
