--- a/docs/components/switch/index.mdx
+++ b/docs/components/switch/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 7
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Switch
 
@@ -345,32 +346,9 @@ npm install @inform-elevate/elevate-core-ui
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- **New**: Switch component fully implemented and functional
-- **New**: Multiple size variants (small, medium, large) 
-- **New**: Slot-based label and help text support
-- **Enhanced**: Comprehensive accessibility support with proper ARIA attributes
-- **Enhanced**: Keyboard navigation (Space and Enter key support)
-- **Enhanced**: Disabled state support for switches
-- Current version in active development
-
-### Switch Component Features
-- ✅ Basic switch with on/off toggle functionality
-- ✅ Label and help text slots for descriptive content
-- ✅ Multiple size variants for different contexts
-- ✅ Disabled state for unavailable options
-- ✅ Checked state control for pre-configured switches
-- ✅ Comprehensive accessibility features
-- ✅ Keyboard navigation support
-
-### Available Components
-- `SwitchComponent`: Main switch toggle with label and help text slots
-- Full integration with form systems and data binding
-- Event handling for state change notifications
-
-### Implementation Status
-- ✅ Core switch functionality operational
-- ✅ Label and help text integration working properly
-- ✅ Size variants and styling functional
-- ✅ Accessibility features implemented
-- ✅ Form integration working
+<ComponentChangelog 
+  component="elvt-switch" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
