--- a/docs/components/breadcrumb-item/index.mdx
+++ b/docs/components/breadcrumb-item/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 13
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 Breadcrumb Items are the individual elements that make up breadcrumb navigation. The ELEVATE Breadcrumb Item component helps designers and developers create consistent styling and behavior for each level in the navigation hierarchy, supporting various states and interaction patterns that enhance wayfinding experiences.
 
@@ -320,11 +321,9 @@ Experience how breadcrumb items behave in realistic contexts. All examples use a
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.25-alpha (July 10, 2025)
-- **Enhanced**: Adjust Design for BreadcrumbItem
-
-### Version 0.0.2-alpha (March 19, 2025)
-- **New**: Add Breadcrumb and Breadcrumb Item Components (initial implementation)
+<ComponentChangelog 
+  component="elvt-breadcrumb-item" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
