--- a/docs/components/input/index.mdx
+++ b/docs/components/input/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 3
 ---
 
 import ComponentShowcase from '@site/src/components/ComponentShowcase';
+import ComponentChangelog from '@site/src/components/ComponentChangelog';
 
 # Input
 
@@ -474,21 +475,9 @@ import '@inform-elevate/elevate-core-ui/dist/components/input/input.js';
 
 ## Changelog
 
-### Version 0.0.26-alpha (July 16, 2025)
-- Current version in active development
-
-### Version 0.0.25-alpha (July 10, 2025)
-- **Enhanced**: Improved validation state styling
-- **New**: Added warning validation state
-
-### Version 0.0.22-alpha (June 25, 2025)
-- **New**: Added input size variations
-- **Enhanced**: Better help text positioning
-
-### Version 0.0.20-alpha (June 18, 2025)
-- **New**: Added validation state support
-- **Enhanced**: Improved accessibility features
-
-### Version 0.0.15-alpha (May 20, 2025)
-- **New**: Add Input Component (initial implementation)
-- **New**: Basic input types and styling
+<ComponentChangelog 
+  component="elvt-input" 
+  maxVersions={5}
+  showMetadata={true}
+  compactMode={false}
+/>
