Fix JSX style attribute errors across component documentation
Resolved React crash caused by string style attributes instead of JSX style objects.
Fixed 10 style attributes across 3 component files:
- dialog/index.mdx: 3 fixes (text-align, padding, font-size, etc.)
- divider/index.mdx: 2 fixes (padding, border, border-radius)
- icon/index.mdx: 5 fixes (max-width, padding, background, border-radius)

Added systematic JSX style fix script for future maintenance.

Changes:
- Convert CSS string values to proper JSX style objects
- Preserve code examples that should remain as strings
- Handle camelCase conversion (font-size → fontSize)
- Add comprehensive error handling and logging

Fixed input component page crash with "The style prop expects a mapping
from style properties to values, not a string" error.

--- a/docs/components/dialog/index.mdx
+++ b/docs/components/dialog/index.mdx
@@ -541,15 +541,15 @@ Test dialogs in common user workflow scenarios:
     <h2>Upgrade to Premium</h2>
   </elvt-dialog-header>
   <elvt-dialog-content>
-    <div style="text-align: center; padding: 1rem;">
+    <div style={{textAlign: 'center', padding: '1rem'}}>
       <h3>Premium Features</h3>
-      <ul style="text-align: left; margin: 1rem 0;">
+      <ul style={{textAlign: 'left', margin: '1rem 0'}}>
         <li>Unlimited projects</li>
         <li>Advanced analytics</li>
         <li>Priority support</li>
         <li>Team collaboration</li>
       </ul>
-      <div style="font-size: 2rem; font-weight: bold; color: #0066cc;">$19/month</div>
+      <div style={{fontSize: '2rem', fontWeight: 'bold', color: '#0066cc'}}>$19/month</div>
     </div>
   </elvt-dialog-content>
   <elvt-dialog-actions>
