--- a/docs/components/divider/index.mdx
+++ b/docs/components/divider/index.mdx
@@ -107,7 +107,7 @@ Dividers provide subtle visual separation that helps users understand content re
   </elvt-button>
 </div>`}
 >
-  <elvt-stack direction="row" align="center" spacing="medium" style="padding: 1rem; border: 1px solid #e0e0e0; border-radius: 4px">
+  <elvt-stack direction="row" align="center" spacing="medium" style={{padding: '1rem', border: '1px solid #e0e0e0', borderRadius: '4px'}}>
     <elvt-button size="small" tone="subtle">
       <elvt-icon slot="prefix" icon="mdi:file"></elvt-icon>
       New
@@ -326,7 +326,7 @@ import '@inform-elevate/elevate-core-ui/dist/components/divider/divider.js';
     </div>
     
     {/* Navigation with vertical dividers */}
-    <elvt-stack direction="row" align="center" spacing="medium" style="padding: 0.75rem; background: #f4f4f4; border-radius: 8px">
+    <elvt-stack direction="row" align="center" spacing="medium" style={{padding: '0.75rem', background: '#f4f4f4', borderRadius: '8px'}}>
       <elvt-button size="small" tone="subtle">Dashboard</elvt-button>
       <elvt-divider orientation="vertical" style={{height: '20px', backgroundColor: '#c6c6c6'}}></elvt-divider>
       <elvt-button size="small" tone="subtle">Reports</elvt-button>
