--- a/docs/components/icon/index.mdx
+++ b/docs/components/icon/index.mdx
@@ -370,8 +370,8 @@ Experience how icons enhance real interface elements and improve usability.
   </div>
 </div>`}
 >
-  <elvt-stack direction="column" spacing="large" style="max-width: 500px">
-    <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.75rem; border: 1px solid #8d8d8d; border-radius: 4px">
+  <elvt-stack direction="column" spacing="large" style={{maxWidth: '500px'}}>
+    <elvt-stack direction="row" align="center" spacing="small" style={{padding: '0.75rem', border: '1px solid #8d8d8d', borderRadius: '4px'}}>
       <elvt-icon icon="mdi:magnify" style={{color: '#6f6f6f', fontSize: '20px'}}></elvt-icon>
       <input type="text" placeholder="Search products..." style={{border: 'none', outline: 'none', flex: 1, fontSize: '1rem'}} />
       <elvt-icon icon="mdi:close" style={{color: '#8d8d8d', fontSize: '18px', cursor: 'pointer'}} title="Clear search"></elvt-icon>
@@ -393,15 +393,15 @@ Experience how icons enhance real interface elements and improve usability.
     </elvt-stack>
     
     <elvt-stack direction="column" spacing="small">
-      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #f0f8ff; border-radius: 4px">
+      <elvt-stack direction="row" align="center" spacing="small" style={{padding: '0.5rem', background: '#f0f8ff', borderRadius: '4px'}}>
         <elvt-icon icon="mdi:information" style={{color: '#0066cc', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Your changes have been saved automatically</span>
       </elvt-stack>
-      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #f0f9f0; border-radius: 4px">
+      <elvt-stack direction="row" align="center" spacing="small" style={{padding: '0.5rem', background: '#f0f9f0', borderRadius: '4px'}}>
         <elvt-icon icon="mdi:check-circle" style={{color: '#24a148', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Upload completed successfully</span>
       </elvt-stack>
-      <elvt-stack direction="row" align="center" spacing="small" style="padding: 0.5rem; background: #fff9f0; border-radius: 4px">
+      <elvt-stack direction="row" align="center" spacing="small" style={{padding: '0.5rem', background: '#fff9f0', borderRadius: '4px'}}>
         <elvt-icon icon="mdi:alert-circle" style={{color: '#f1c21b', fontSize: '16px'}}></elvt-icon>
         <span style={{fontSize: '0.875rem'}}>Please review your settings before continuing</span>
       </elvt-stack>
